🌐 Теперь имена энтити тоже переводятся

--- a/resource/localization/en/duckInstrument.properties
+++ b/resource/localization/en/duckInstrument.properties
@@ -1,3 +1,6 @@
+duckInstrument.Category=Duck Instruments
+duckInstrument.GrandPiano=Grand Piano
+duckInstrument.Piano=Piano
 duckInstrument.AutoPlaying=Auto-playing %q
 duckInstrument.Space=Space for sheet music
 duckInstrument.Alt=Alt for auto-play mode
