--- a/resource/localization/ru/duckInstrument.properties
+++ b/resource/localization/ru/duckInstrument.properties
@@ -1,4 +1,6 @@
-duckInstrument.AutoPlaying=Авто-игра песни %q
+duckInstrument.GrandPiano=Рояль
+duckInstrument.Piano=Пианино
+duckInstrument.AutoPlaying=Сейчас играет: %q
 duckInstrument.Space=Пробел - Нотные листы
 duckInstrument.Alt=Alt - Авто-Игра
 duckInstrument.Tab1=Tab - Прекратить Авто-игру | Ctrl - Говорить
